# ww-website

./: .env.example  .gitattributes  .gitignore  app.py  check_anon_access.py  check_db_status.py  cluster_utils.py  db_utils.py  docker-compose.dev.yml  docker-compose.yml  exif_parser.py  inat_oauth.py  readme.md  render.yaml  requirements-deploy.txt  requirements.txt
backend/: Dockerfile  README.md  check_config.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/domain/: __init__.py  clustering.py  exif.py  inaturalist.py  lorawan.py  manifest.py  model.py  photo_preprocessing.py  public_api.py
backend/app/jobs/: __init__.py  definitions.py  runner.py  store.py  worker.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
backend/app/registries/: __init__.py  camera_configs.py  model_registry.py
backend/app/routers/: __init__.py  clustering.py  exif.py  inaturalist.py  jobs.py  lorawan.py  manifest.py  models.py  public_api.py
backend/app/schemas/: __init__.py  common.py  inaturalist.py  job.py  lorawan.py  manifest.py  model.py  public_api.py
backend/app/services/: __init__.py  api_key.py  azure_storage.py  blob_store.py  cache.py  db_utils.py  google_drive.py  http_client.py  inat_oauth.py  vela.py  (+3 more)
backend/tests/: conftest.py  test_exif_domain.py  test_firmware_contract.py  test_inaturalist.py  test_lorawan_domain.py  test_manifest_domain.py  test_model_domain.py  test_motion_roi.py  test_public_api.py  test_routers.py  test_upload_pipeline.py
(+49 files in other folders)
