[project]
name = "wildlife-watcher-backend"
version = "2.0.0"
description = "Wildlife Watcher V2 Backend — FastAPI + ARQ async job system"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
